--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="Lasagna.jpeg">
     <h2>Ingredients Needed</h2>
     <ul>
         <li>Cheese</li>
         <li>Sauce</li>
         <li>Noodle</li>
     </ul>
+    <h2>Steps to Make Lasagna</h2>
     <ol>
         <li>Cheese on the pan</li>
         <li>Cheese on the noodle</li>
